# nwindows

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ReleaseNotes.md  build..sh  configure.sh  cspell.json  install.sh  todo.txt
.github/workflows/: cmake-multi-platform.yml  codeql.yml  docs_build.yml
config/: NWindowsVersionInfo.hpp.in  NWindowsVersionInfo.tsx.in  README.md
docs/: 2apache.sh  CMakeLists.txt  build.sh  index.html  make_route_pages.sh  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/public/: robots.txt  sitemap.xml
docs/src/: App.css  App.tsx  Banner.tsx  CenteredImage.tsx  ClassDescription.tsx  Code.tsx  CppFunctionParser.tsx  DocsNav.tsx  DocsPage.tsx  ErrorBoundary.tsx  IndexBuilder.tsx  IndexData.tsx  Loading.tsx  M.tsx  MainPageSearchBox.tsx  NWindowsVersionInfo.tsx  Name.tsx  NavigationType.tsx  NotFound.tsx  PageColumn.tsx  PersistentScrollDiv.tsx  ReleaseNotes.tsx  SearchBox.tsx  SearchPage.tsx  SectionHead.tsx  SiteIndexData.tsx  UseWindowSize.tsx  index.bak.css  index.css  main.tsx
docs/src/api/: NEvent.tsx
docs/src/assets/: ReleaseNotes.md  ReleaseNotes.txt
docs/src/pages/: ApiClasses.tsx  ApiConstants.tsx  ApiDefines.tsx  ApiEnums.tsx  ApiMethods.tsx  ApiStructs.tsx  ApiTypedefs.tsx  ClassNBoxElement.tsx  ClassNButtonBaseElement.tsx  ClassNButtonElement.tsx  ClassNCheckboxElement.tsx  ClassNColor.tsx  ClassNColorPair.tsx  ClassNContainerElement.tsx  ClassNDropdownElement.tsx  ClassNElement.tsx  ClassNEvent.tsx  ClassNHorizontalStackElement.tsx  ClassNMenuElement.tsx  ClassNMenuItemElement.tsx  ClassNMessageWindow.tsx  ClassNObject.tsx  ClassNPopupMenuWindow.tsx  ClassNPopupWindow.tsx  ClassNRadioGroupElement.tsx  ClassNTextEditElement.tsx  ClassNTextElement.tsx  ClassNVerticalStackElement.tsx  ClassNWindow.tsx  ComposedCustomControl.tsx  CustomControls.tsx  CustomUnicode.tsx  Documentation.tsx  FullCustomControl.tsx  HelloNWindows.tsx  HomePage.tsx  IndexPage.tsx  InheritingCustomControl.tsx  InstallingNWindows.tsx  KeyboardEvents.tsx  (+15 more)
examples/: CMakeLists.txt
examples/context_edit/: CMakeLists.txt  context_edit.cpp
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/hello_world2/: CMakeLists.txt  hello_world2.cpp
examples/nwindows_test/: CMakeLists.txt  ascii_fallback_test_window.cpp  box_test_window.cpp  console_font_test_window.cpp  edit_text_test_window.cpp  error_test_window.cpp  menu_test_window.cpp  rendering_test_window.cpp  test_main.cpp  tests.hpp  unicode_test_window.cpp
src/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.hpp  ConsoleFont.cpp  ConsoleFontManager.cpp  ConsoleFontManager.hpp  ConsoleFontTest.cpp  Finally.hpp  NClipboard.cpp  NUnicodeServices.cpp  NUtf8.cpp  NWindows.cpp  NWindowsVersionInfo.hpp.in  PrivateElements.hpp  SyntheticCharacters.cpp  SyntheticCharacters.hpp  TempFile.cpp  TempFile.hpp  TestCharacters.txt  scratch.cpp  test_locale.cpp  test_main.cpp
src/include/NWindows/: ConsoleFont.hpp  NClipboard.hpp  NEvent.hpp  NUnicodeServices.hpp  NUtf8.hpp  NWindows.hpp  NWindowsVersionInfo.hpp  NoCopyNoMove.hpp  nss.hpp
